Closed Bug 1856359 Opened 2 years ago Closed 2 years ago

Utility process should honor MOZ_CRASHREPORTER_SHUTDOWN

Categories

(Core :: IPC, defect)

defect

Tracking

()

RESOLVED FIXED
120 Branch
Tracking Status
firefox120 --- fixed

People

(Reporter: gerard-majax, Assigned: gerard-majax)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.
Pushed by alissy@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c612b2550fc8 Respect MOZ_CRASHREPORTER_SHUTDOWN for Utility process r=gsvelto,necko-reviewers,kershaw
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: