Bug 1856359 - Respect MOZ_CRASHREPORTER_SHUTDOWN for Utility process r=gsvelto,necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D189824