ipc/glue/UtilityProcessParent.cpp
@@ -162,6 +162,8 @@ void UtilityProcessParent::ActorDestroy(ActorDestroyReason aWhy) {
     if (!dumpID.IsEmpty()) {
       props->SetPropertyAsAString(u"dumpID"_ns, dumpID);
     }
+
+    MaybeTerminateProcess();
   }
 
   nsAutoString pid;
