netwerk/ipc/SocketProcessParent.cpp
@@ -20,7 +20,6 @@
 #include "mozilla/RemoteLazyInputStreamParent.h"
 #include "mozilla/Telemetry.h"
 #include "mozilla/TelemetryIPC.h"
-#include "nsIAppStartup.h"
 #include "nsIConsoleService.h"
 #include "nsIHttpActivityObserver.h"
 #include "nsIObserverService.h"
@@ -89,16 +88,7 @@ void SocketProcessParent::ActorDestroy(ActorDestroyReason aWhy) {
 
   if (aWhy == AbnormalShutdown) {
     GenerateCrashReport(OtherPid());
-
-    if (PR_GetEnv("MOZ_CRASHREPORTER_SHUTDOWN")) {
-      printf_stderr("Shutting down due to socket process crash.\n");
-      nsCOMPtr<nsIAppStartup> appService =
-          do_GetService("@mozilla.org/toolkit/app-startup;1");
-      if (appService) {
-        bool userAllowedQuit = true;
-        appService->Quit(nsIAppStartup::eForceQuit, 1, &userAllowedQuit);
-      }
-    }
+    MaybeTerminateProcess();
   }
 
   if (mHost) {
